--- a/car-sharing-web-app/package.json
+++ b/car-sharing-web-app/package.json
@@ -20,7 +20,10 @@
     "@angular/platform-browser-dynamic": "~8.1.1",
     "@angular/router": "~8.1.1",
     "@ng-bootstrap/ng-bootstrap": "^5.1.0",
+    "angular-datatables": "^8.0.0",
     "bootstrap": "^4.3.1",
+    "datatables.net": "^1.10.19",
+    "datatables.net-dt": "^1.10.19",
     "jquery": "^3.4.1",
     "ngx-bootstrap": "^5.1.1",
     "rxjs": "~6.4.0",
@@ -32,8 +35,10 @@
     "@angular/cli": "^8.1.2",
     "@angular/compiler-cli": "~8.1.1",
     "@angular/language-service": "~8.1.1",
+    "@types/datatables.net": "^1.10.17",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.3.31",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
